--- a/study-app.json
+++ b/study-app.json
@@ -13,7 +13,8 @@
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  3,
@@ -45,7 +46,8 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  4,
@@ -77,7 +79,8 @@
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 }
             ]
         },
@@ -89,7 +92,8 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  2,
@@ -131,7 +135,8 @@
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 }
             ]
         },
@@ -148,7 +153,8 @@
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  3,
@@ -180,7 +186,8 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  4,
@@ -202,7 +209,8 @@
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  3,
@@ -239,7 +247,8 @@
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 }
             ]
         },
@@ -256,7 +265,8 @@
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  3,
@@ -284,7 +294,8 @@
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/217/200/200.jpg?hmac=LoNAUhfCfURrqYjw6WECEWybn4B8y37k5G2odewlZ_Y",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  3,
@@ -320,7 +331,9 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/325/200/200.jpg?hmac=ZCsEKv0ID3Pljov7A1Ljhc4gOcr8fsqzEry_bTjeY2s",
-                    "result": true
+                    "result": true,
+                    "correct": true
+
                 }
             ]
         },
@@ -331,7 +344,8 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/38/200/200.jpg?hmac=dmdbTgVfAkQ41DmAJKt2u_w6vmqFO_UQ_Ro7F9U-Yws",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  2,
@@ -372,7 +386,8 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/267/200/200.jpg?hmac=Y1nyfMYjg-MPsZP0aKx1TqI1ogQRSYtHkM5kpZpybqk",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 }
             ]
         },
@@ -393,7 +408,8 @@
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/209/200/200.jpg?hmac=hsby8v-4ueyQ64FWn-Eqn4P9AtOM7OCsjA_L8rxOwHM",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  4,
@@ -424,7 +440,8 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/367/200/200.jpg?hmac=6NmiWxiENMBIeAXEfu9fN20uigiBudgYzqHfz-eXZYk",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 }
             ]
         },
@@ -445,7 +462,8 @@
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/599/200/300.jpg?hmac=E2gUK85wncj5qALDLpEjQzqgfazui9pDGMgzVWMpqo4",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  4,
@@ -461,7 +479,8 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/951/200/200.jpg?hmac=FVINiB5mMdXIUDDk4AYptO4s4A2ETDNX4n3RSDaoB4E",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  2,
@@ -492,7 +511,8 @@
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/886/200/200.jpg?hmac=pfmGQi7EpajLoJI0tKTPTUwOPQtH9YwE-wNl_kr7ErI",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  3,
@@ -523,7 +543,8 @@
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/619/200/200.jpg?hmac=kS8OI8cYlvghz5FZaiYdIx96pUPQ30oF6bIsAg3AOZ4",
-                    "result": true
+                    "result": true,
+                    "correct": true
                 },
                 {
                     "id":  4,
