--- a/study-app.json
+++ b/study-app.json
@@ -8,7 +8,8 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
@@ -19,12 +20,14 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -36,12 +39,14 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
@@ -52,7 +57,8 @@
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -64,17 +70,20 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
@@ -98,17 +107,20 @@
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -120,17 +132,20 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
@@ -148,7 +163,8 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
@@ -159,12 +175,14 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -176,12 +194,14 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
@@ -192,7 +212,8 @@
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -204,7 +225,8 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
@@ -215,12 +237,14 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -232,17 +256,20 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
@@ -260,7 +287,8 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
@@ -271,12 +299,14 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         }
@@ -289,7 +319,8 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/844/200/200.jpg?hmac=blYHTv1EUQA2puhc8O_7gTL4H6Y8FgSmVXDYEJqXWdQ",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
@@ -300,12 +331,14 @@
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/1010/200/200.jpg?hmac=030jCT8DyI2wW-CYue7-l9xlHBAGpacaSJ6tYnnka3I",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/336/200/200.jpg?hmac=VZ7MzNM30jINYNf5Oj_8zqPLTDAyKDk6eXWTGnNb4bU",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -316,17 +349,20 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/1021/200/200.jpg?hmac=5Jzd15OWoPw0fwvsvL05A1BAIN_B543TvjlxqGk1PDU",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/490/200/200.jpg?hmac=7WZhaN9NS8sb08YmpHre_3NGnVUsmH8X5W_GlG2Mry4",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/472/200/200.jpg?hmac=PScxKeNxgxcauarhbWIWesyo4VsouCtfdX8fNTy9HRI",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
@@ -350,17 +386,20 @@
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/143/200/200.jpg?hmac=zGj8dhmmqaaQZDcHhU9C0itdL12zcGTpuVdQiVrYiEQ",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/461/200/200.jpg?hmac=OfKixfjCbSjC-h3P78PbMNsJqVCnAClKqNmrUCONSw4",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/119/200/200.jpg?hmac=JGrHG7yCKfebsm5jJSWw7F7x2oxeYnm5YE_74PhnRME",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -371,17 +410,20 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/347/200/200.jpg?hmac=HdR0jM_L0Ly35FyTiC7c4NSIkzL0lE_cvesfe-dWAVk",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/910/200/200.jpg?hmac=5y7FBcwrEQLaT1hO3VufjbQNxx_eg-znDlA1JclTpDQ",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/361/200/200.jpg?hmac=8pPTUqe61Cxj4FYarGS9vZKtqUSjAzxOQJ0zBIHq28o",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
@@ -398,12 +440,14 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/200/200/200.jpg?hmac=mk1Tu6dXHQvpaA8RfxlDUZjbWG23krNkiB9kyYoEmO8",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/280/200/200.jpg?hmac=jjE26x23XLyRTL5st1-nb_BAHldv1V3JoFRn4g_nN04",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
@@ -414,7 +458,8 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/236/200/200.jpg?hmac=BntZCNnsVBEqCPw_5q7AhpFIO2vQrHXcSLFR_C1i4fo",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -425,17 +470,20 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/891/200/200.jpg?hmac=J19K6yDbzNDUjkInb56-h-n_xM3i40GCfHWor0YKgyU",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/1075/200/200.jpg?hmac=a9PcCsXBonPZ7LCLyWX6dHM1XGbcojML0qhnq-Ee4a4",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/77/200/200.jpg?hmac=RaFJkrixMn3dR7INSPWcmjC7HCxmggmF5mTlMpyEHsQ",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
@@ -452,12 +500,14 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/1050/200/200.jpg?hmac=cq2YpkyrMed7ZhJMjcuNfGZtfsZFRhooscxiGkOcgD4",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/879/200/200.jpg?hmac=_4fWz44KoPcfzc5VRuEhms_-fXjdx1VsijYO3xVD9b0",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
@@ -468,7 +518,8 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/733/200/200.jpg?hmac=ci3XeHM32Dpcvwg7zqGHqI0dgL_YlvKuzbBhxaB7DhM",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -485,17 +536,20 @@
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/469/200/200.jpg?hmac=r_nEPJ5ExnhVEQSrNc19WUPConxJzBC929FJHl_Y5N4",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/175/200/200.jpg?hmac=5rzD884Hqi9oWr_n5vg0XSc9f6yMlPotvKa8Y0cVzd4",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/383/200/200.jpg?hmac=rXabQJHkUdhkZ467kU2O2mFC-ZufkuYob-xSiZEbNWc",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -506,7 +560,8 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/330/200/200.jpg?hmac=Qo-hwVGhetTRMtlg4NE-HSzGQmvEC4vPxFFp3foXOHM",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
@@ -517,12 +572,14 @@
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/910/200/200.jpg?hmac=5y7FBcwrEQLaT1hO3VufjbQNxx_eg-znDlA1JclTpDQ",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/44/200/200.jpg?hmac=W5KcqhapHjBgEIHGQpQnX6o9jdOXQEVCKEdGIohjisY",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         },
@@ -533,12 +590,14 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/281/200/200.jpg?hmac=5FvZ-Y5zbbpS3-mJ_mp6-eH61MkwhUJi9qnhscegqkY",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/923/200/200.jpg?hmac=3VHvOqFmO1AmGdpW-XcIVVb5CSOm5AwgyYRt9jYWAvo",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 },
                 {
                     "id":  3,
@@ -549,7 +608,8 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/935/200/200.jpg?hmac=WNkIQ-NNhosb-4Qfz8Tixwp7-HVS540Z2dS0VDyJ5ac",
-                    "result": false
+                    "result": false,
+                    "correct": false
                 }
             ]
         }
