--- a/study-app.json
+++ b/study-app.json
@@ -8,8 +8,7 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
@@ -20,14 +19,12 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -39,14 +36,12 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
@@ -57,8 +52,7 @@
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -70,20 +64,17 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
@@ -107,20 +98,17 @@
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -132,20 +120,17 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
@@ -163,8 +148,7 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
@@ -175,14 +159,12 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -194,14 +176,12 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
@@ -212,8 +192,7 @@
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -225,8 +204,7 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
@@ -237,14 +215,12 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -256,20 +232,17 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "answer": "chicken",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
@@ -287,8 +260,7 @@
                 {
                     "id":  1,
                     "answer": "dog",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
@@ -299,14 +271,12 @@
                 {
                     "id":  3,
                     "answer": "cat",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "answer": "pig",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         }
@@ -319,8 +289,7 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/844/200/200.jpg?hmac=blYHTv1EUQA2puhc8O_7gTL4H6Y8FgSmVXDYEJqXWdQ",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
@@ -331,14 +300,12 @@
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/1010/200/200.jpg?hmac=030jCT8DyI2wW-CYue7-l9xlHBAGpacaSJ6tYnnka3I",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/336/200/200.jpg?hmac=VZ7MzNM30jINYNf5Oj_8zqPLTDAyKDk6eXWTGnNb4bU",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -349,20 +316,17 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/1021/200/200.jpg?hmac=5Jzd15OWoPw0fwvsvL05A1BAIN_B543TvjlxqGk1PDU",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/490/200/200.jpg?hmac=7WZhaN9NS8sb08YmpHre_3NGnVUsmH8X5W_GlG2Mry4",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/472/200/200.jpg?hmac=PScxKeNxgxcauarhbWIWesyo4VsouCtfdX8fNTy9HRI",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
@@ -386,20 +350,17 @@
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/143/200/200.jpg?hmac=zGj8dhmmqaaQZDcHhU9C0itdL12zcGTpuVdQiVrYiEQ",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/461/200/200.jpg?hmac=OfKixfjCbSjC-h3P78PbMNsJqVCnAClKqNmrUCONSw4",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/119/200/200.jpg?hmac=JGrHG7yCKfebsm5jJSWw7F7x2oxeYnm5YE_74PhnRME",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -410,20 +371,17 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/347/200/200.jpg?hmac=HdR0jM_L0Ly35FyTiC7c4NSIkzL0lE_cvesfe-dWAVk",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/910/200/200.jpg?hmac=5y7FBcwrEQLaT1hO3VufjbQNxx_eg-znDlA1JclTpDQ",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/361/200/200.jpg?hmac=8pPTUqe61Cxj4FYarGS9vZKtqUSjAzxOQJ0zBIHq28o",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
@@ -440,14 +398,12 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/200/200/200.jpg?hmac=mk1Tu6dXHQvpaA8RfxlDUZjbWG23krNkiB9kyYoEmO8",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/280/200/200.jpg?hmac=jjE26x23XLyRTL5st1-nb_BAHldv1V3JoFRn4g_nN04",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
@@ -458,8 +414,7 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/236/200/200.jpg?hmac=BntZCNnsVBEqCPw_5q7AhpFIO2vQrHXcSLFR_C1i4fo",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -470,20 +425,17 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/891/200/200.jpg?hmac=J19K6yDbzNDUjkInb56-h-n_xM3i40GCfHWor0YKgyU",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/1075/200/200.jpg?hmac=a9PcCsXBonPZ7LCLyWX6dHM1XGbcojML0qhnq-Ee4a4",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/77/200/200.jpg?hmac=RaFJkrixMn3dR7INSPWcmjC7HCxmggmF5mTlMpyEHsQ",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
@@ -500,14 +452,12 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/1050/200/200.jpg?hmac=cq2YpkyrMed7ZhJMjcuNfGZtfsZFRhooscxiGkOcgD4",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/879/200/200.jpg?hmac=_4fWz44KoPcfzc5VRuEhms_-fXjdx1VsijYO3xVD9b0",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
@@ -518,8 +468,7 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/733/200/200.jpg?hmac=ci3XeHM32Dpcvwg7zqGHqI0dgL_YlvKuzbBhxaB7DhM",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -536,20 +485,17 @@
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/469/200/200.jpg?hmac=r_nEPJ5ExnhVEQSrNc19WUPConxJzBC929FJHl_Y5N4",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/175/200/200.jpg?hmac=5rzD884Hqi9oWr_n5vg0XSc9f6yMlPotvKa8Y0cVzd4",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/383/200/200.jpg?hmac=rXabQJHkUdhkZ467kU2O2mFC-ZufkuYob-xSiZEbNWc",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -560,8 +506,7 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/330/200/200.jpg?hmac=Qo-hwVGhetTRMtlg4NE-HSzGQmvEC4vPxFFp3foXOHM",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
@@ -572,14 +517,12 @@
                 {
                     "id":  3,
                     "pic": "https://i.picsum.photos/id/910/200/200.jpg?hmac=5y7FBcwrEQLaT1hO3VufjbQNxx_eg-znDlA1JclTpDQ",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/44/200/200.jpg?hmac=W5KcqhapHjBgEIHGQpQnX6o9jdOXQEVCKEdGIohjisY",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         },
@@ -590,14 +533,12 @@
                 {
                     "id":  1,
                     "pic": "https://i.picsum.photos/id/281/200/200.jpg?hmac=5FvZ-Y5zbbpS3-mJ_mp6-eH61MkwhUJi9qnhscegqkY",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  2,
                     "pic": "https://i.picsum.photos/id/923/200/200.jpg?hmac=3VHvOqFmO1AmGdpW-XcIVVb5CSOm5AwgyYRt9jYWAvo",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 },
                 {
                     "id":  3,
@@ -608,8 +549,7 @@
                 {
                     "id":  4,
                     "pic": "https://i.picsum.photos/id/935/200/200.jpg?hmac=WNkIQ-NNhosb-4Qfz8Tixwp7-HVS540Z2dS0VDyJ5ac",
-                    "result": false,
-                    "correct": false
+                    "result": false
                 }
             ]
         }
